trying to fix those text fields on mobile

--- a/static/css/edit-article.css
+++ b/static/css/edit-article.css
@@ -238,7 +238,8 @@ span {
 }
 
 .form-data textarea, .form-data input[type=text], .form-data input[type=email], .form-data input[type=datetime-local] {
-	padding: unset; /*7px 10px;*/
+	padding: 7px 10px;
+	height: unset;
 	resize: unset; /*none;*/
 	border: 1px solid #676774;
 	font-size: 15px;
